--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@ Authors:
 
 Jason Huggins <jrhuggins@gmail.com>
 Chris Williams <>
-Erik Kastner kastner@gmail.com
+Erik Kastner <kastner@gmail.com>
+Jason Fox <jasonrobertfox@gmail.com>
