--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,4 @@ Jason Huggins <jrhuggins@gmail.com>
 Chris Williams <>
 Erik Kastner <kastner@gmail.com>
 Jason Fox <jasonrobertfox@gmail.com>
-Chris G. Williams <cgw239@nyu.edu>
+Chris G. Williams <chilliams@gmail.com>
