Massive dir cleanup. Adding Tapster 2 files.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,12 @@
 Authors:
 
+Primary maintainer:
+
 Jason Huggins <jrhuggins@gmail.com>
+
+
+Contributors:
+
 Chris Williams <>
 Erik Kastner <kastner@gmail.com>
 Jason Fox <jasonrobertfox@gmail.com>
